Create the locations api layer.
