# src/app/features/location/api/__init__.py
@@ -1,0 +1,3 @@
+from app.features.location.api.locations import router
+
+__all__ = ["router"]
